# measles

./: .Rbuildignore  .gitignore  AGENTS.md  DESCRIPTION  DEVELOPMENT.md  Makefile  NAMESPACE  NEWS.md  README.md  README.qmd  configure.ac  configure~
.devcontainer/: Containerfile  devcontainer.json
.devcontainer/r-devel-san/: Containerfile  devcontainer.json
.github/workflows/: copilot-setup-steps.yml  coverage.yaml  pkgdown.yaml  (+2 more)
R/: InterventionMeaslesPEP.R  ModelMeaslesMixing.R  ModelMeaslesMixingRiskQuarantine.R  ModelMeaslesSchool.R  arg-checks.R  calibrate_mixing_model.R  contact_matrix.R  cpp11.R  data.R  entity_tools.R  measles-package.R  onload.R
autom4te.cache/: output.0  requests  traces.0
data/: hildale_and_colorado_city.rda  hildale_and_colorado_city_matrix.rda  short_creek.rda  short_creek_matrix.rda  southwest_utah.rda  southwest_utah_matrix.rda
data-raw/: hildale_and_colorado_city.R  short_creek.R  southwest_utah.R
man/: InterventionMeaslesPEP.Rd  ModelMeaslesMixing.Rd  ModelMeaslesMixingRiskQuarantine.Rd  ModelMeaslesSchool.Rd  calibrate_mixing_model.Rd  contact_matrix.Rd  entities_from_dataframe.Rd  hildale_and_colorado_city.Rd  hildale_and_colorado_city_matrix.Rd  measles-package.Rd  measles_cpp_version.Rd  short_creek.Rd  short_creek_matrix.Rd  southwest_utah.Rd  southwest_utah_matrix.Rd
paper/: AGENTS.md  paper.bib  paper.md
playground/: Makefile  shortcreek.cpp
src/: Makevars.in  Makevars.win  cpp11.cpp  epimodels.cpp  interventions.cpp
vignettes/: hildale-and-colorado-city.qmd  school.qmd  short-creek.qmd  southwest-utah.qmd
(+11 files in other folders)
